--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Sobre Nosotros Convoyame</h2>
                         <p class="text-white-50">
-                            Convoyame es una empresa médica comprometida con la excelencia en la atención y el bienestar de 
-                            nuestros pacientes. Nuestro equipo de profesionales altamente calificados trabaja incansablemente 
-                            para proporcionar servicios de salud de la más alta calidad, utilizando tecnología de vanguardia y 
-                            enfoques innovadores. Nos enorgullece ofrecer un ambiente cálido y acogedor donde los pacientes se 
-                            sientan valorados y escuchados. En Convoyame, nuestra misión es mejorar la vida de las personas a 
-                            través de una atención médica compasiva y centrada en el paciente.
+                            Convoyame Somos un sistema de apoyo y acompañamiento enfocado en personas de edad avanzada y discapacitados. Con nuestra empresa podrás encontrar soluciones para los cuidados de sus seres queridos
                         </p>
                     </div>
                 </div>
@@ -68,14 +63,12 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Salud1.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Enfermeria_Geriatrica.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Cirugia</h4>
-                            <p class="text-black-50 mb-0">En Convoyame, nos enorgullece presentar nuestro 
-                                Departamento de Cirugía, donde combinamos experiencia, tecnología de 
-                                vanguardia y un enfoque centrado en el paciente para ofrecer la más alta 
-                                calidad de atención quirúrgica.</p>
+                            <h4>Enfermeria Geriatrica</h4>
+                            <p class="text-black-50 mb-0">Con gratitud y dedicación, les damos la bienvenida al Departamento de Enfermería Geriátrica de Convoyame, un espacio diseñado específicamente para atender las necesidades de nuestros pacientes de la tercera edad.
+                                Aquí, en nuestro departamento, abrazamos el privilegio de cuidar y apoyar a nuestros mayores con respeto, compasión y experiencia, ofreciendo un entorno de atención centrada en la persona y adaptada a las particularidades de cada individuo.</p>
                         </div>
                     </div>
                 </div>
@@ -95,22 +88,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project Two Row-->
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Pediatria</h4>
-                                    <p class="mb-0 text-white-50">Es un placer darles la bienvenida al Departamento de Pediatría de Convoyame, donde cuidamos con dedicación y profesionalismo a los más pequeños de la familia.
-                                        En nuestro departamento, nos comprometemos a brindar atención médica especializada y compasiva a los niños y adolescentes, asegurando su salud y bienestar en cada etapa de su desarrollo.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <!-- Signup-->
         <section class="signup-section" id="signup">
